--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,29 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="pref_location_default">New York</string>
+    <string name="pref_location_label">Choose your location</string>
+    <string name="pref_location_key">location</string>
+
+    <string name="pref_unit_default">Metric</string>
+    <string name="pref_unit_key">units</string>
+    <string name="pref_unit_label">Temperature Units</string>
+    <string name="pref_unit_metric">Metric</string>
+    <string name="pref_unit_imperial">Imperial</string>
+    <string name="pref_unit_label_imperial">Imperial</string>
+    <string name="pref_unit_label_metric">Metric</string>
+
+    <string-array name="pref_unit_options">
+        <item>@string/pref_unit_label_metric</item>
+        <item>@string/pref_unit_label_imperial</item>
+    </string-array>
+
+    <string-array name="pref_unit_values">
+        <item>@string/pref_unit_metric</item>
+        <item>@string/pref_unit_imperial</item>
+    </string-array>
+
 
 </resources>
